[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "insightiq-common"
dynamic = ["version"]
description = "Shared context/models for InsightIQ"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Codex AI Team" }]
license = { text = "Proprietary" }
dependencies = [
  "pydantic>=2.0.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.0.0",
  "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://bitbucket.org/codex_data/insightiq_common/"
Repository = "https://bitbucket.org/codex_data/insightiq_common/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["insightiq_common*"]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true


